<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/colorPickerLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <com.example.drawingApp.customViews.GradientSquare
        android:id="@+id/gradientSquare"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_margin="@dimen/pad_1" />

    <com.example.drawingApp.customViews.ColorSlider
        android:id="@+id/slider"
        android:layout_width="20dp"
        android:layout_height="200dp"
        android:layout_margin="@dimen/pad_1" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/colorOne"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@color/black" />

        <TextView
            android:id="@+id/colorTwo"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@color/black" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hue_H" />

            <com.example.drawingApp.customViews.ForceEditText
                android:id="@+id/hslH"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:text="@string/default_int"
                android:textSize="@dimen/text_small_1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saturation_S" />

            <com.example.drawingApp.customViews.ForceEditText
                android:id="@+id/hslS"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:text="@string/default_int"
                android:textSize="@dimen/text_small_1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/value_V" />

            <com.example.drawingApp.customViews.ForceEditText
                android:id="@+id/hslV"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/editText_1"
                android:inputType="numberDecimal"
                android:text="@string/default_int"
                android:textSize="@dimen/text_small_1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rgb_red_R" />

            <com.example.drawingApp.customViews.ForceEditText
                android:id="@+id/rgbR"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="@string/default_int"
                android:textSize="@dimen/text_small_1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rgb_green_G" />

            <com.example.drawingApp.customViews.ForceEditText
                android:id="@+id/rgbG"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/editText_1"
                android:inputType="number"
                android:text="@string/default_int"
                android:textSize="@dimen/text_small_1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rgb_blue_B" />

            <com.example.drawingApp.customViews.ForceEditText
                android:id="@+id/rgbB"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="@string/default_int"
                android:textSize="@dimen/text_small_1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hex_pound" />

            <com.example.drawingApp.customViews.ForceEditText
                android:id="@+id/colorHex"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_hex"
                android:textSize="@dimen/text_small_1" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialogSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/purple_200"
            android:text="@string/submit" />

        <TextView
            android:id="@+id/dialogCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/teal_200"
            android:text="@string/cancel" />

    </LinearLayout>

</LinearLayout>